# math

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  cgo_prebuilt.go  cgo_source.go  cgo_source.go.in  cummax.go  cummax_test.go  cumsum.go  cumsum_test.go  erf.go  erf_test.go  exp.go  exp_test.go  go.mod  log.go  log_test.go  normal.go  normal_inv.go  normal_inv_test.go  normal_test.go  pow.go  pow_test.go  sqrt.go  sqrt_test.go
benchmarks/: CMakeLists.txt  bench_cummax.c  bench_cumsum.c  bench_erf.c  bench_exp.c  bench_log.c  bench_main.c  bench_math.c  bench_normal.c  bench_normal_inv.c  bench_pow.c  bench_sqrt.c
cmake/: finkit-mathConfig.cmake.in
include/: cumsum.h  erf.h  least_squares.h  normal.h  normal_inv.h
scripts/: test_coverage.sh
tests/: CMakeLists.txt  test_cummax.c  test_cumsum.c  test_erf.c  test_exp.c  test_log.c  test_main.c  test_math.c  test_normal.c  test_normal_inv.c  test_pow.c  test_sqrt.c
